[package]
name = "dnazip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
crossbeam-channel = "0.5.12"
flate2 = "1.0.28"
needletail = "0.5.1"
size = "0.4.1"
walkdir = "2.5.0"

[profile.release]
strip = "debuginfo"
lto = true
